--- a/index.html
+++ b/index.html
@@ -5,7 +5,167 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sorpresas in Style</title>
   <style>
-    /* ... (tu CSS exacto, sin cambios) ... */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f9;
+    }
+
+    header {
+      background-color: #66e0d4;
+      padding: 1em;
+      text-align: center;
+      color: white;
+    }
+
+    #company-logo {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    #filtro-categoria {
+      margin: 20px auto 0;
+      display: flex;
+      justify-content: center;
+    }
+
+    #productos-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+      gap: 12px;
+      padding: 20px;
+      justify-items: center;
+    }
+
+    .producto-tarjeta {
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 12px;
+      width: 150px;
+      text-align: center;
+      background-color: white;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      position: relative;
+    }
+
+    .producto-imagen {
+      width: 100%;
+      height: 120px;
+      object-fit: cover;
+      border-radius: 6px;
+    }
+
+    .producto-nombre {
+      font-size: 14px;
+      margin: 6px 0;
+      color: #333;
+    }
+
+    .producto-precio {
+      font-size: 13px;
+      color: #666;
+    }
+
+    .producto-categoria {
+      font-size: 12px;
+      color: #999;
+    }
+
+    .producto-boton {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      background-color: #007acc;
+      border: none;
+      border-radius: 50%;
+      color: white;
+      width: 30px;
+      height: 30px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    #carrito {
+      padding: 20px;
+      background-color: #fff;
+      border-top: 1px solid #ddd;
+    }
+
+    #botonAdmin {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      font-size: 24px;
+      background: #007acc;
+      color: white;
+      border: none;
+      padding: 10px;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 10;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.4);
+      padding-top: 60px;
+    }
+
+    .modal-content {
+      background-color: #fff;
+      margin: auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 90%;
+      max-width: 400px;
+      position: relative;
+    }
+
+    .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: black;
+      cursor: pointer;
+    }
+
+    .admin-button {
+      display: block;
+      width: 100%;
+      margin: 10px 0;
+      padding: 10px;
+      background-color: #66e0d4;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+      color: white;
+      cursor: pointer;
+    }
+
+    .input-edit {
+      width: 100%;
+      margin: 5px 0;
+    }
+
+    @media screen and (min-width: 600px) {
+      #productos-container {
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      }
+    }
   </style>
 </head>
 <body>
@@ -30,176 +190,187 @@
     </section>
   </main>
 
-  <!-- Modal admin (sin cambios) -->
+  <!-- Modal -->
   <div id="adminModal" class="modal">
-    <!-- ... tu HTML de modal ... -->
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2>Panel de Administración</h2>
+      <form id="formulario-producto">
+        <input type="text" id="nombreProducto" placeholder="Nombre del desayuno" required class="input-edit">
+        <input type="number" id="precioProducto" placeholder="Precio" required class="input-edit">
+        <input type="text" id="categoriaProducto" placeholder="Categoría" required class="input-edit">
+        <input type="file" id="imagenProducto" accept="image/*" required class="input-edit">
+        <button type="submit" class="admin-button">Agregar Desayuno</button>
+      </form>
+      <hr>
+      <h3>Desayunos Agregados</h3>
+      <div id="productos-agregados"></div>
+      <hr>
+      <h3>Cambiar Logo</h3>
+      <input type="file" id="logoInput" accept="image/*" class="input-edit"/>
+      <button onclick="cambiarLogo()" class="admin-button">Cambiar Logo</button>
+    </div>
   </div>
+
   <button id="botonAdmin">⚙️</button>
 
-  <!-- Firebase + Realtime Database -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-    import {
-      getDatabase, ref, onValue, push, update, remove
-    } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyCpHYnWuWp7sb9P-HR6rEMg7fg9Xigl-lA",
-      authDomain: "sorpresasinstyle-2664b.firebaseapp.com",
-      databaseURL: "https://sorpresasinstyle-2664b-default-rtdb.firebaseio.com",
-      projectId: "sorpresasinstyle-2664b",
-      storageBucket: "sorpresasinstyle-2664b.firebasestorage.app",
-      messagingSenderId: "615713402015",
-      appId: "1:615713402015:web:74bcd71e0a22f3815c06aa",
-      measurementId: "G-82WQ2NKVLQ"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
-
-    let productos = [];
-    let carrito = JSON.parse(localStorage.getItem("carrito")) || [];
-    let categoriaSeleccionada = "todas";
-
+  <script>
+    const modal = document.getElementById("adminModal");
+    const botonAdmin = document.getElementById("botonAdmin");
+    const span = document.getElementsByClassName("close")[0];
     const productosContainer = document.getElementById("productos-container");
     const productosAgregados = document.getElementById("productos-agregados");
     const selectorCategoria = document.getElementById("selector-categoria");
 
-    // 1. Cargar productos en tiempo real
-    const productosRef = ref(db, 'productos');
-    onValue(productosRef, snapshot => {
-      productos = [];
-      snapshot.forEach(child => {
-        productos.push({ key: child.key, ...child.val() });
-      });
-      actualizarVista();
+    let productos = JSON.parse(localStorage.getItem("productos")) || [];
+    let carrito = JSON.parse(localStorage.getItem("carrito")) || [];
+    let categoriaSeleccionada = "todas";
+
+    botonAdmin.onclick = () => modal.style.display = "block";
+    span.onclick = () => modal.style.display = "none";
+    window.onclick = e => { if (e.target === modal) modal.style.display = "none"; };
+
+    document.getElementById("formulario-producto").addEventListener("submit", function (event) {
+      event.preventDefault();
+      const nombre = document.getElementById("nombreProducto").value;
+      const precio = document.getElementById("precioProducto").value;
+      const categoria = document.getElementById("categoriaProducto").value;
+      const imagen = document.getElementById("imagenProducto").files[0];
+
+      if (imagen) {
+        const reader = new FileReader();
+        reader.onloadend = function () {
+          const nuevoProducto = {
+            nombre, precio, categoria, imagen: reader.result
+          };
+          productos.push(nuevoProducto);
+          localStorage.setItem("productos", JSON.stringify(productos));
+          actualizarVista();
+        };
+        reader.readAsDataURL(imagen);
+      }
+
+      this.reset();
     });
 
-    // 2. Agregar producto (desde el formulario)
-    document.getElementById("formulario-producto")
-      .addEventListener("submit", e => {
-        e.preventDefault();
-        const nombre = document.getElementById("nombreProducto").value;
-        const precio = document.getElementById("precioProducto").value;
-        const categoria = document.getElementById("categoriaProducto").value;
-        const imagenFile = document.getElementById("imagenProducto").files[0];
-        const reader = new FileReader();
-        reader.onloadend = () => {
-          push(productosRef, {
-            nombre, precio, categoria, imagen: reader.result
-          });
-        };
-        reader.readAsDataURL(imagenFile);
-        e.target.reset();
-      });
-
-    // 3. Funciones de edición y borrado
-    window.eliminarProducto = key => {
-      remove(ref(db, `productos/${key}`));
-    };
-    window.editarProducto = (key, campo, valor) => {
-      update(ref(db, `productos/${key}`), { [campo]: valor });
-    };
-    window.editarImagen = (key, input) => {
-      const file = input.files[0];
-      const r = new FileReader();
-      r.onloadend = () => {
-        update(ref(db, `productos/${key}`), { imagen: r.result });
-      };
-      r.readAsDataURL(file);
-    };
-
-    // 4. Mostrar productos y admin
     function actualizarVista() {
       productosContainer.innerHTML = '';
       productosAgregados.innerHTML = '';
       actualizarSelectorCategorias();
 
-      const lista = categoriaSeleccionada === "todas"
+      const productosFiltrados = categoriaSeleccionada === "todas"
         ? productos
         : productos.filter(p => p.categoria === categoriaSeleccionada);
 
-      lista.forEach(p => {
-        productosContainer.innerHTML += `
+      productosFiltrados.forEach((producto, index) => {
+        const tarjeta = `
           <div class="producto-tarjeta">
-            <img src="${p.imagen}" class="producto-imagen">
-            <div class="producto-nombre">${p.nombre}</div>
-            <div class="producto-precio">$${p.precio}</div>
-            <div class="producto-categoria">${p.categoria}</div>
-            <button class="producto-boton" onclick="agregarAlCarrito('${p.key}')">🛒</button>
+            <img src="${producto.imagen}" class="producto-imagen">
+            <div class="producto-nombre">${producto.nombre}</div>
+            <div class="producto-precio">$${producto.precio}</div>
+            <div class="producto-categoria">${producto.categoria}</div>
+            <button class="producto-boton" onclick="agregarAlCarrito(${index})">🛒</button>
           </div>`;
+        productosContainer.innerHTML += tarjeta;
+      });
+
+      productos.forEach((producto, index) => {
         productosAgregados.innerHTML += `
           <div class="producto-tarjeta">
-            <img src="${p.imagen}" class="producto-imagen">
-            <input class="input-edit" type="text" value="${p.nombre}"
-              onchange="editarProducto('${p.key}', 'nombre', this.value)">
-            <input class="input-edit" type="number" value="${p.precio}"
-              onchange="editarProducto('${p.key}', 'precio', this.value)">
-            <input class="input-edit" type="text" value="${p.categoria}"
-              onchange="editarProducto('${p.key}', 'categoria', this.value)">
-            <input class="input-edit" type="file" onchange="editarImagen('${p.key}', this)">
-            <button class="admin-button" onclick="eliminarProducto('${p.key}')">Eliminar</button>
+            <img src="${producto.imagen}" class="producto-imagen">
+            <input class="input-edit" type="text" value="${producto.nombre}" onchange="editarProducto(${index}, 'nombre', this.value)">
+            <input class="input-edit" type="number" value="${producto.precio}" onchange="editarProducto(${index}, 'precio', this.value)">
+            <input class="input-edit" type="text" value="${producto.categoria}" onchange="editarProducto(${index}, 'categoria', this.value)">
+            <input class="input-edit" type="file" accept="image/*" onchange="editarImagen(${index}, this)">
+            <button class="admin-button" onclick="eliminarProducto(${index})">Eliminar</button>
           </div>`;
       });
     }
 
     function actualizarSelectorCategorias() {
-      const cats = ["todas", ...new Set(productos.map(p => p.categoria))];
-      selectorCategoria.innerHTML = cats.map(cat =>
-        `<option value="${cat}" ${cat===categoriaSeleccionada?'selected':''}>${cat}</option>`
-      ).join('');
+      const categorias = ["todas", ...new Set(productos.map(p => p.categoria))];
+      selectorCategoria.innerHTML = categorias.map(cat => 
+        `<option value="${cat}" ${cat === categoriaSeleccionada ? "selected" : ""}>${cat}</option>`).join('');
     }
-    window.filtrarCategoria = () => {
-      categoriaSeleccionada = selectorCategoria.value;
-      actualizarVista();
-    };
 
-    // 5. Carrito (localStorage)
-    window.agregarAlCarrito = key => {
-      const p = productos.find(x => x.key === key);
-      carrito.push(p);
+    function agregarAlCarrito(index) {
+      carrito.push(productos[index]);
       localStorage.setItem("carrito", JSON.stringify(carrito));
       actualizarCarrito();
-    };
+    }
+
     function actualizarCarrito() {
-      const ul = document.getElementById("lista-carrito");
-      ul.innerHTML = '';
+      const listaCarrito = document.getElementById("lista-carrito");
+      listaCarrito.innerHTML = '';
       let total = 0;
       carrito.forEach(p => {
-        ul.innerHTML += `<li>${p.nombre} - $${p.precio}</li>`;
+        listaCarrito.innerHTML += `<li>${p.nombre} - $${p.precio}</li>`;
         total += parseFloat(p.precio);
       });
       document.getElementById("total").textContent = total.toFixed(2);
     }
-    window.comprar = () => {
-      if (!carrito.length) return alert("Tu carrito está vacío.");
-      alert("¡Gracias por tu compra!");
-      carrito = [];
-      localStorage.setItem("carrito", "[]");
-      actualizarCarrito();
-    };
 
-    // Logo en localStorage (igual que antes)
+    function eliminarProducto(index) {
+      productos.splice(index, 1);
+      localStorage.setItem("productos", JSON.stringify(productos));
+      actualizarVista();
+    }
+
+    function editarProducto(index, campo, valor) {
+      productos[index][campo] = valor;
+      localStorage.setItem("productos", JSON.stringify(productos));
+      actualizarVista();
+    }
+
+    function editarImagen(index, input) {
+      const file = input.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onloadend = () => {
+          productos[index].imagen = reader.result;
+          localStorage.setItem("productos", JSON.stringify(productos));
+          actualizarVista();
+        };
+        reader.readAsDataURL(file);
+      }
+    }
+
+    function comprar() {
+      if (carrito.length) {
+        alert("¡Gracias por tu compra!");
+        carrito = [];
+        localStorage.setItem("carrito", JSON.stringify(carrito));
+        actualizarCarrito();
+      } else {
+        alert("Tu carrito está vacío.");
+      }
+    }
+
+    function filtrarCategoria() {
+      categoriaSeleccionada = selectorCategoria.value;
+      actualizarVista();
+    }
+
     function cambiarLogo() {
-      const f = document.getElementById("logoInput").files[0];
-      const r = new FileReader();
-      r.onloadend = () => {
-        document.getElementById("company-logo").src = r.result;
-        localStorage.setItem("logoEmpresa", r.result);
-      };
-      r.readAsDataURL(f);
-    }
-    window.cambiarLogo = cambiarLogo;
-    function cargarLogo() {
-      const l = localStorage.getItem("logoEmpresa");
-      if (l) document.getElementById("company-logo").src = l;
+      const input = document.getElementById("logoInput").files[0];
+      if (input) {
+        const reader = new FileReader();
+        reader.onloadend = function () {
+          document.getElementById("company-logo").src = reader.result;
+          localStorage.setItem("logoEmpresa", reader.result);
+        };
+        reader.readAsDataURL(input);
+      }
     }
 
-    // Inicia todo al cargar página
-    window.onload = () => {
-      cargarLogo();
-      actualizarCarrito();
-    };
+    function cargarLogoGuardado() {
+      const logo = localStorage.getItem("logoEmpresa");
+      if (logo) document.getElementById("company-logo").src = logo;
+    }
+
+    actualizarVista();
+    actualizarCarrito();
+    cargarLogoGuardado();
   </script>
 </body>
 </html>
