--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -26,10 +27,26 @@
       object-fit: cover;
     }
 
-    #filtro-categoria {
-      margin: 20px auto 0;
+    #categorias-container {
       display: flex;
       justify-content: center;
+      flex-wrap: wrap;
+      margin: 20px 0;
+    }
+
+    .categoria-boton {
+      background-color: #007acc;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      padding: 10px 15px;
+      margin: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .categoria-boton:hover {
+      background-color: #005f99;
     }
 
     #productos-container {
@@ -195,11 +212,7 @@
     <h1>Sorpresas in Style</h1>
   </header>
 
-  <div id="filtro-categoria">
-    <select id="selector-categoria" onchange="filtrarCategoria()">
-      <option value="todas">Todas las categorías</option>
-    </select>
-  </div>
+  <div id="categorias-container"></div>
 
   <main>
     <section id="productos-container"></section>
@@ -241,7 +254,7 @@
     const span = document.getElementsByClassName("close")[0];
     const productosContainer = document.getElementById("productos-container");
     const productosAgregados = document.getElementById("productos-agregados");
-    const selectorCategoria = document.getElementById("selector-categoria");
+    const categoriasContainer = document.getElementById("categorias-container");
 
     let productos = JSON.parse(localStorage.getItem("productos")) || [];
     let carrito = JSON.parse(localStorage.getItem("carrito")) || [];
@@ -277,7 +290,7 @@
     function actualizarVista() {
       productosContainer.innerHTML = '';
       productosAgregados.innerHTML = '';
-      actualizarSelectorCategorias();
+      actualizarBotonesCategorias();
 
       const productosFiltrados = categoriaSeleccionada === "todas"
         ? productos
@@ -308,10 +321,10 @@
       });
     }
 
-    function actualizarSelectorCategorias() {
+    function actualizarBotonesCategorias() {
       const categorias = ["todas", ...new Set(productos.map(p => p.categoria))];
-      selectorCategoria.innerHTML = categorias.map(cat => 
-        `<option value="${cat}" ${cat === categoriaSeleccionada ? "selected" : ""}>${cat}</option>`).join('');
+      categoriasContainer.innerHTML = categorias.map(cat => 
+        `<button class="categoria-boton" onclick="filtrarCategoria('${cat}')">${cat}</button>`).join('');
     }
 
     function agregarAlCarrito(index) {
@@ -367,8 +380,8 @@
       }
     }
 
-    function filtrarCategoria() {
-      categoriaSeleccionada = selectorCategoria.value;
+    function filtrarCategoria(categoria) {
+      categoriaSeleccionada = categoria;
       actualizarVista();
     }
 
