--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     header {
       background-color: #66e0d4;
       padding: 1em;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      text-align: center;
       color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     #company-logo {
@@ -26,19 +27,14 @@
       height: 50px;
       border-radius: 50%;
       object-fit: cover;
-      margin-right: 10px;
-    }
-
-    h1 {
-      margin: 0;
-      font-size: 24px;
+      margin-bottom: 10px;
     }
 
     #categorias-container {
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      margin: 20px 0;
+      margin-top: 10px;
     }
 
     .categoria-boton {
@@ -217,9 +213,8 @@
   <header>
     <img id="company-logo" src="" alt="Logo de la empresa">
     <h1>Sorpresas in Style</h1>
+    <div id="categorias-container"></div>
   </header>
-
-  <div id="categorias-container"></div>
 
   <main>
     <section id="productos-container"></section>
